--- a/app/src/main/res/layout/link_comments_link.xml
+++ b/app/src/main/res/layout/link_comments_link.xml
@@ -153,7 +153,7 @@
         android:paddingRight="@dimen/baseline_spacing"
         android:gravity="start"
         android:textAlignment="viewStart"
-        android:textSize="@dimen/link_self_text_size"
+        android:textAppearance="?android:textAppearanceSmall"
         android:textColor="@color/primary_text"
         android:textColorLink="@color/link_color"
         android:bufferType="spannable"
