--- a/app/src/main/res/layout/listings_link.xml
+++ b/app/src/main/res/layout/listings_link.xml
@@ -33,7 +33,7 @@
                 tools:text="The quick brown fox jumped over the white fence" />
 
             <LinearLayout
-                android:layout_width="fill_parent"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:gravity="center">
 
@@ -159,7 +159,7 @@
                 </RelativeLayout>
 
                 <View
-                    android:layout_width="fill_parent"
+                    android:layout_width="match_parent"
                     android:layout_height="@dimen/comment_data_divider_width"
                     android:layout_marginBottom="@dimen/comment_data_divider_margin"
                     android:layout_marginTop="@dimen/comment_data_divider_margin"
