--- a/app/src/main/res/layout/app_toolbar.xml
+++ b/app/src/main/res/layout/app_toolbar.xml
@@ -5,6 +5,6 @@
     android:id="@+id/toolbar"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="@color/primary"
+    android:background="?attr/colorPrimaryDark"
     android:theme="@style/ToolbarThemeLightText"
     app:popupTheme="@style/Theme.AppCompat.Light" />
