--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -16,7 +16,7 @@
         <item name="android:windowBackground">@color/white</item>
     </style>
 
-    <style name="ToolbarThemeLightText" parent="AppTheme">
+    <style name="ToolbarThemeLightText">
         <item name="android:textColorPrimary">?attr/iconColor</item>
         <item name="actionMenuTextColor">?attr/iconColor</item>
         <item name="android:textColorSecondary">?attr/iconColor</item>
