--- a/app/src/main/res/values/styles_theme.xml
+++ b/app/src/main/res/values/styles_theme.xml
@@ -22,8 +22,8 @@
 
     <style name="NightThemeColors" parent="AppTheme">
         <!-- AppCompat theme attributes -->
-        <item name="colorPrimary">@color/primary</item>
-        <item name="colorPrimaryDark">@color/primary_dark</item>
+        <item name="colorPrimary">@color/gray800</item>
+        <item name="colorPrimaryDark">@color/gray900</item>
         <item name="colorAccent">@color/accent</item>
         <!-- Custom attributes -->
         <item name="windowBackgroundColor">@color/gray800</item>
