--- a/app/src/main/res/menu/navigation.xml
+++ b/app/src/main/res/menu/navigation.xml
@@ -45,4 +45,13 @@
 
     </group>
 
+    <group android:visible="@bool/isDebug">
+
+        <item
+            android:id="@+id/drawer_switch_themes"
+            android:title="@string/drawer_switch_themes"
+            android:icon="@null" />
+
+    </group>
+
 </menu>
