--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -32,7 +32,7 @@
     <color name="author_moderator_text">#ffffff</color>
     <color name="author_admin_background">#ff0011</color>
     <color name="author_admin_text">#ffffff</color>
-    <color name="markdown_quote_block">?attr/colorPrimaryLight</color>
+    <color name="markdown_quote_block">@color/material_blue_light</color>
     <color name="comment_controversiality_indicator">#ff5252</color>
     <color name="nsfw_tag_color">#d10023</color>
     <color name="link_color">#0000ee</color>
